syntax = "proto3";

package wmb.proto.mb_protocol;

import "mb_protocol_enums.proto";

enum Acknowladge {
     ACKNOWLADGE_UNKNOWN = 0;
     ACKNOWLADGE_ACK = 0xAA;
     ACKNOWLADGE_NACK = 0x77;
}

message AckFrame {
     reserved 1;
     Acknowladge acknowladge = 2;
}

message PeriodicalConfiguration {
     reserved 1;
     uint32 configuration = 2;
}

message DiagnosticsAnsFrame {
     reserved 1;
     uint32 firmware_version = 2;
     uint32 device_id = 3;
     uint32 last_reset_cause = 4;
     uint32 last_reset_trigger = 5;
     uint32 last_fault_address = 6;
     ModbusMode device_mode = 7;
     AntennaSettings antenna_settings = 8;
     uint32 uptime = 9;
     ModbusBaud baud_port_0 = 10;
     ModbusBaud baud_port_1 = 11;
     repeated PeriodicalConfiguration modbus_configurations = 12;
}

message ModbusResponseFrame {
     reserved 1;
     ModbusPort modbus_port = 2;
     uint32 configuration_index = 3;
}

message AnswerFrame {
     oneof answer_frame {
          AckFrame ack_frame = 1;
          DiagnosticsAnsFrame diagnostics_ans_frame  = 2;
          ModbusResponseFrame modbus_response_frame  = 3;
     }
}